--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -2,6 +2,8 @@ $color-light: #fff;
 $color-dark: #2f3542;
 $color-success: #26de81;
 $color-warning: #e1644e;
+$color-button: #29468d;
+$color-button-hover: #385ebc;
 
 $font-text: 'Poppins', sans-serif;
 
