--- a/client/src/components/features/CardBox/CardBox.module.scss
+++ b/client/src/components/features/CardBox/CardBox.module.scss
@@ -5,14 +5,13 @@
   border: 1px solid #aaa;
   border-radius: 5px;
   width: 250px;
+  margin-bottom: 20px;
 };
 
 .img_wrapper {
   display: flex;
   justify-content: center;
   height: 200px;
-  margin-top: 25px;
-
 };
 
 img {
@@ -25,6 +24,7 @@ img {
 .description_all {
   margin: 25px;
   position: relative;
+  overflow: hidden;
 };
 
 .title {
