--- a/client/src/components/features/Lineup/Lineup.module.scss
+++ b/client/src/components/features/Lineup/Lineup.module.scss
@@ -1,5 +1,12 @@
 .cards_wrapper {
 	display: flex;
-	justify-content: space-between;
 	flex-wrap: wrap;
+};
+
+@media (max-width: 1220px){
+	.cards_wrapper {
+    display: flex;
+    justify-content: center;
+  };
 }
+;
