Add delete modal

--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -4,6 +4,7 @@ $color-success: #26de81;
 $color-warning: #e1644e;
 $color-button: #29468d;
 $color-button-hover: #385ebc;
+$color-warning-hover: #e37764;
 
 $font-text: 'Poppins', sans-serif;
 
