--- a/client/src/components/pages/AdPage/AdPage.module.scss
+++ b/client/src/components/pages/AdPage/AdPage.module.scss
@@ -74,3 +74,22 @@ img {
   }
 }
 
+.button_delete{
+  background-color: $color-warning;
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
+  cursor: pointer;
+  &:hover {
+    background-color: $color-warning-hover;
+  }
+}
+
