Add author avatar

--- a/client/src/components/pages/AdPage/AdPage.module.scss
+++ b/client/src/components/pages/AdPage/AdPage.module.scss
@@ -90,6 +90,11 @@ img {
   cursor: pointer;
   &:hover {
     background-color: $color-warning-hover;
-  }
-}
+  };
+};
 
+.avatar {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+};
