--- a/client/src/components/features/CardBox/CardBox.module.scss
+++ b/client/src/components/features/CardBox/CardBox.module.scss
@@ -33,7 +33,7 @@ img {
 };
 
 .title {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   letter-spacing: 1.5px;
 };
@@ -73,6 +73,10 @@ img {
   }
 }
 
+.logged_info{
+color: $color-warning;
+text-align: center;
+}
 @media (max-width: 617px){
 	.card_wrapper {
 width: 100%;
