--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -5,6 +5,7 @@ $color-warning: #e1644e;
 $color-button: #29468d;
 $color-button-hover: #385ebc;
 $color-warning-hover: #e37764;
+$color-border-nav: #aaa;
 
 $font-text: 'Poppins', sans-serif;
 
