--- a/client/src/components/pages/SignIn/SignIn.module.scss
+++ b/client/src/components/pages/SignIn/SignIn.module.scss
@@ -1,25 +1,22 @@
+@import '../../../styles/typography.scss';
+
 label {
   display: block;
-}
+};
 
 .container, .form {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
+};
 
 h1 {
   margin-bottom: 25px !important;
-}
+};
 
 input {
   border-radius: 3px;
   border: none;
   margin-bottom: 10px !important;
-}
-button {
-  margin-top: 25px !important;
-  text-align: center;
-  display: block;
-}
+};
