Add SearchResult component, add style

--- a/client/src/components/features/SearchBar/SearchBar.module.scss
+++ b/client/src/components/features/SearchBar/SearchBar.module.scss
@@ -1,5 +1,15 @@
+@import '../../../styles/typography.scss';
+
 .container {
   width: 50%;
   margin: 0 auto;
   text-align: center;
+}
+
+.input {
+  height: 34px;
+  margin-left: 5px;
+  &:active, &:focus{
+    outline: none;
+  }
 }
