--- a/client/src/components/pages/EditAdd/EditAdd.module.scss
+++ b/client/src/components/pages/EditAdd/EditAdd.module.scss
@@ -15,13 +15,17 @@ align-items: center;
   padding: 15px 0;
 };
 
-.textarea {
+.textarea, .textarea_title {
   width: 50%;
   height: 100px;
   line-height: 20px;
   padding: 5px 10px;
   border-radius: 5px;
 };
+
+.textarea_title{
+  height: 40px;
+}
 
 .button {
   background-color: $color-button;
