--- a/client/src/components/pages/SignIn/SignIn.module.scss
+++ b/client/src/components/pages/SignIn/SignIn.module.scss
@@ -12,7 +12,7 @@ label {
 };
 
 h1 {
-  margin-bottom: 25px !important;
+  margin-bottom: 15px !important;
 };
 
 input {
@@ -20,3 +20,7 @@ input {
   border: none;
   margin-bottom: 10px !important;
 };
+
+small {
+  margin-bottom: 10px;
+}
